--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="col-md-12">
           <h4>
             Hi, my name is <span class="blue">Maria Angella</span>...<i>please call me <span class="blue">Mrs. Oriek</span>.</i><br />
-            <small><span class="brown">Business Processes Analyst || Passionate Software Engineer and mathematician || with a love for coding-----Have a Degree and Diploma in Telecom Engineering</span> <span class="blue"><i>Aspiring Data Analyst in Fintech</i>.</span></small>
+            <small><span class="brown">Business Processes Analyst || Passionate Telecommunications Engineer and mathematician || with a love for coding---</span> <span class="blue"><i>Aspiring Data Analyst in Fintech</i>.</span></small>
           </h4>
         </div>
       </div>
