--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="col-md-12">
           <h4>
             Hi, my name is <span class="blue">Maria Angella</span>...<i>please call me <span class="blue">Mrs. Oriek</span>.</i><br />
-            <small><span class="brown">Business Processes Analyst || Telecommunications Engineer and mathematician </span> <span class="blue"><i>with a love for coding---</i>.</span></small>
+            <small><span class="brown">Business Processes Analyst || Telecommunications Engineer and mathematician </span> <span class="blue"><i>--------------with a love for coding---</i>.</span></small>
           </h4>
         </div>
       </div>
